# getools

./: README.md  pyproject.toml  setup.py
docs/: conf.py  getools.rst  getools.utils.rst  index.rst  modules.rst
getools/: __init__.py  align.py  cross.py  file_utils.py  gen.py  other_dc3.py  phylogeny.py  popdist.py  readalign.py  string_utils.py
getools/utils/: file_utils.py  gen_utils.py  string_utils.py
test_data/: chimp.fa  ecoli_5000.bw  ecoli_5000.sa  ecoli_50000.bw  panamabananas.bw  panamabananas.sa  pse_GA26895.fa  pse_atl.fa  pseudo_dna.fa  pseudo_dna_seq.bw
test_data/large/: ecoli_100000.sa  ecoli_200000.bw  ecoli_200000.sa  ecoli_500000.bw  ecoli_500000.sa  ecoli_500000.sa1
tests/: tests.py  tests_align.py
