[tool.poetry]
name = "getools"
version = "0.1.1"
description = "Genetics, Evolution and Bioinformatic tools"
authors = ["russellmyers <flipside@netspace.net.au>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.21.2"
scipy = "^1.7.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
